--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <!-- Meta tags Obrigatórias -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Aulas de GIT</title>
-  </head>
+<head>
+  <!-- Meta tags Obrigatórias -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <title>Aulas de GIT</title>
+</head>
+
 <body>
+  <main>
     <h1>Aulas de GIT</h1>
-    <p>como retornar um commit<p>
-    
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus quam delectus necessitatibus, in facilis et provident doloribus, nulla inventore quisquam distinctio! Cum quibusdam voluptatem fuga nisi amet, minima quod culpa.</p>
+  </main>
+
 </body>
+
 </html>
