--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <main>
     <h1>Aulas de GIT</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus quam delectus necessitatibus, in facilis et provident doloribus, nulla inventore quisquam distinctio! Cum quibusdam voluptatem fuga nisi amet, minima quod culpa.</p>
+
+    <h2>Um titulo aleatorio</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, maiores fuga! Corporis voluptatum neque est quia expedita totam labore dolorem eius. Ad ipsa iste, maxime officia sint nemo quisquam at.</p>
   </main>
 
 </body>
